--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login | AES</title>
+  <title>Login | AAS</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -148,7 +148,7 @@
   <div class="login-container">
     <div class="login-header">
       <img src="/image.png" alt="AES Logo">
-      <h1>Admin Login</h1>
+      <h1>Login</h1>
     </div>
     
     <form class="login-form" action="/admin/login" method="POST">
@@ -160,7 +160,7 @@
         <i class="fas fa-lock"></i>
         <input type="password" placeholder="Password" name="password" id="password" required/>
       </div>
-      <button type="submit" id="submit">Sign In</button>
+      <button type="submit" id="submit">Login In</button>
     </form>
   </div>
 </body>
